# blog-data-quality-on-spark

./: .gitignore  Makefile  README.md  download_data.sh  pyproject.toml
blog/: POST.md  POST_PART_1.md  POST_PART_2.md  POST_PART_3.md
deequ/: .gitignore  Makefile  build.sbt
deequ/src/main/scala/: Common.scala  Constants.scala  EvaluationDeequ.scala  EvaluationDeequChecks.scala  EvaluationDeequProfile.scala
dqx/: .gitignore  Makefile  pyproject.toml
dqx/src/: common.py  evaluation_dqx_checks.py
great_expectations/: Makefile  pyproject.toml
great_expectations/src/: evaluation_great_expectations.py
soda/: Makefile  pyproject.toml
soda/src/: common.py  constants.py  evaluation_soda.py  evaluation_soda_checks.yaml
src/: common.py  constants.py  evaluation_great_expectations.py  evaluation_soda.py  evaluation_soda_checks.yaml  great_expectations_evaluation.py  read.py
