[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
requires-python = "`>=3.13"

[project]
name = "blog-data-quality-on-spark"
version = "0.1.0"
dependencies = [
    "pyspark==4.0.0",
    "deltalake==1.2.1",
    "great-expectations==1.9.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.4",
    "black==25.11.0",
]