[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.11"

[project]
name = "blog-data-quality-great-expectations"
version = "0.1.0"
dependencies = [
    "pandas==2.3.3",
    "pyspark==3.5.4",
    "deltalake==1.2.1",
    "great-expectations==1.9.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.4",
    "black==25.11.0",
]